--- a/view/index.html
+++ b/view/index.html
@@ -16,6 +16,7 @@
 		<div class="container">
 			<div class="row full-height justify-content-center">
 				<div class="col-12 text-center align-self-center py-5">
+					<div class = "black">
 					<div class="section pb-5 pt-5 pt-sm-2 text-center">
 						<h6 class="mb-0 pb-3"><span>로그인 </span><span>회원가입</span></h6>
 			          	<input class="checkbox" type="checkbox" id="reg-log" name="reg-log"/>
@@ -67,6 +68,7 @@
 			      			</div>
 			      		</div>
 			      	</div>
+					</div>
 		      	</div>
 	      	</div>
 	    </div>
