--- a/view/style.css
+++ b/view/style.css
@@ -1,6 +1,5 @@
 /* Please ❤ this if you like it! */
 
-
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
 
 body{
@@ -8,8 +7,8 @@ body{
 	font-weight: 300;
 	font-size: 15px;
 	line-height: 1.7;
-	color: #c4c3ca;
-	background-color: #1f2029;
+	color: white;
+	background-color: black;
 	overflow-x: hidden;
 }
 a {
@@ -62,7 +61,8 @@ h6 span{
   padding: 0;
   margin: 10px auto;
   cursor: pointer;
-  background-color: #ffeba7;
+  /* 로그인, 회원가입전환하는 background-color */
+  background-color: white;
 }
 .checkbox:checked + label:before,
 .checkbox:not(:checked) + label:before{
@@ -72,7 +72,7 @@ h6 span{
   height: 36px;
   border-radius: 50%;
   color: #ffeba7;
-  background-color: #102770;
+  background-color: blue;
   font-family: 'DungGeunMo';
   content: '\eb4f';
   z-index: 20;
@@ -86,7 +86,6 @@ h6 span{
 .checkbox:checked + label:before {
   transform: translateX(44px) rotate(-270deg);
 }
-
 
 .card-3d-wrap {
   position: relative;
@@ -111,7 +110,7 @@ h6 span{
 .card-front, .card-back {
   width: 100%;
   height: 100%;
-  background-color: #2a2b38;
+  background-color: blue;
   background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat.svg');
   background-position: bottom center;
   background-repeat: no-repeat;
@@ -144,7 +143,6 @@ h6 span{
   display: block;
 }
 
-
 .form-group{ 
   position: relative;
   display: block;
@@ -163,7 +161,7 @@ h6 span{
   letter-spacing: 0.5px;
   outline: none;
   color: #c4c3ca;
-  background-color: #1f2029;
+  background-color: white;
   border: none;
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
@@ -257,9 +255,9 @@ h6 span{
   -ms-flex-pack: center;
   text-align: center;
   border: none;
-  background-color: #ffeba7;
-  color: #102770;
-  box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
+  background-color: blue;
+  color: white;
+  /* box-shadow: 0 8px 24px 0 rgba(255,235,167,.2); */
 }
 .btn:active,
 .btn:focus{  
@@ -268,13 +266,10 @@ h6 span{
   box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
 }
 .btn:hover{  
-  background-color: #102770;
-  color: #ffeba7;
+  background-color: white;
+  color: blue;
   box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
 }
-
-
-
 
 .logo {
 	position: absolute;
@@ -298,4 +293,8 @@ h6 span{
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/DungGeunMo.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+}
+
+.black{
+  background-color: blue;
 }
